# obj_orientation

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: detection.launch.py
orientation_detection/: detector_node.py  display_node.py  webcam_publisher.py
